Thu Dec 27 14:04:22 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c (gtk_socket_key_press_event): 
	gtk/gtkplug.c (gtk_plug_key_press_event): Don't do
	special handling of key presses unless we are doing 
	iter-app embedding. (Fixes #67590, Anders Carlsson)

Thu Dec 27 16:37:04 2001  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_deleted),
	(gtk_tree_model_sort_sort_level),
	(gtk_tree_model_sort_insert_value): fix a few places where
	I was confused between modelsort iters and other iters. This was
	really going to happen someday ;)

Wed Dec 26 23:41:41 2001  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_rows_reordered): ensure
	we are unprelighted before reordering

	* gtk/gtktreemodel.c (gtk_tree_row_ref_reordered_callback): we
	need to break out of the for loop, not return (this fixed
	the 'selection freeze' bug).

	* gtk/gtktreemodelsort.c: more fixage and cleanups. It seems to
	be pretty stable now, though it still needs some more code
	cleanups.

Wed Dec 26 12:32:31 2001  Owen Taylor  <otaylor@redhat.com>

	* docs/Changes-2.0.txt: Document the fact that
	gtk_paned_set_handle_size() has been removed.

	* gtk/gtkpaned.h Remove gtk_paned_handle_size() compat macro, 
	since it pointed to gtk_paned_set_handle_size(), which
	was removed. (#66760, Matt Wilson)

Wed Dec 26 12:28:24 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_highlight): Connect 
	gtk_drag_hightlight_expose _after_, so it works with
	widgets that paint there entire background. (#66735)

Wed Dec 26 12:17:06 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkplug.c (gtk_plug_size_allocate): Assign the
	allocation to widget->allocation. (Fixes #67290,
	Chris Phelps.)

Wed Dec 26 11:49:01 2001  Owen Taylor  <otaylor@redhat.com>

	(#67542, reported by Anders Carlsson)
	
	* gtk/gtkstyle.c (gtk_style_real_init_from_rc): Merge
	rc_style->font_desc with defaul style instead of replacing
	it.
