@@ -1,3 +1,11 @@
+Thu Dec 27 15:13:44 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkmenu.c (gtk_menu_set_title): Allow unsetting
+	the title by setting to NULL. Move docs inline. 
+	Update the title if the tearoff window already
+	exists. Code cleanup. (Fixes #65190, reported by
+	Vitaly Tishkov.)
+
 Thu Dec 27 14:04:22 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtksocket.c (gtk_socket_key_press_event): 
